--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" href="photo.ico">
     <title>Photo Gallery</title>
   </head>
   <body>
